# Grok.LivingWorld

./: .gitignore  README.md  design.md  grok.md  grok_dm_instructions.md  grok_world.py  pyproject.toml  world.ecs.db
scripts/: build_grok_world.py  check_source_integrity.py  grok_prepare.py  grok_prepare_single_file.py  grok_prepare_unified_runtime.py  grok_repl_bundle.py  grok_repl_doctor.py  grok_src_dropper.py  grok_unified_engine.py  prepare_for_deployment.py  repair_escaped_init_files.py  setup.bat  setup.ps1  setup.sh
src/ecs/: __init__.py  core.py
src/livingworld_ecs/: __init__.py  components.py  core.py  systems.py
src/ttrpg_5e/: __init__.py  components.py  factory.py
src/ttrpg_engine/: __init__.py  components.py  events.py  llm_api.py  morale_system.py  systems.py  world_db.py
src/ttrpg_engine/components/: __init__.py  actor.py  emotional.py  faction.py  kernel.py  llm.py  location.py  memory.py  (+4 more)
src/world_log/: dice.py  models.py  storage.py
tests/: test_5e_factory.py  test_actor_agency_system.py  test_core.py  test_dice.py  test_ecs_core.py  test_ecs_core_additional_coverage.py  test_faction_system.py  test_game_loop_state_machine.py  test_gateway_pubsub.py  test_llm_api_validation.py  test_llm_gateway_validation.py  test_llm_response_schema_validation.py  test_llm_simulation.py  test_location_management.py  test_morale_system.py  test_npc_lifecycle_relationships.py  test_player_agency_llm_integration.py  test_source_integrity.py  test_systems.py  test_world_db.py  test_world_db_persistent_memory.py  test_world_log.py  test_world_storage_backend.py
